--- a/pages/poisk/style.scss
+++ b/pages/poisk/style.scss
@@ -1,3 +1,21 @@
+*{
+    padding: 0;
+    margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    box-sizing: border-box;
+}
+.glav_continer{
+  margin-top: 20px;
+    display: flex;
+    padding: 0 13%;
+}
+.container{
+    width: 100%;
+    margin-left: 10px;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(5, 1fr);
+}
 .product {
     border: none;
     border-radius: 10px;
@@ -58,4 +76,38 @@
 .rate_img{
   width: 7%;
   margin-right: 1%;
+}
+.left_glav{
+  width: 25%;
+}
+.svet_item{
+  margin-top: 5px;
+  width: 30px;
+  height: 30px;
+  border-radius: 100px;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
+.category{
+  font-size: 22px;
+}
+.sena{
+  margin-top: 20px;
+  font-size: 22px;
+}
+.inp_div{
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  input{
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid #d8d8da;
+    height: 30px;
+    width: 49%;
+  }
+}
+.svet{
+  font-size: 22px;
 }
