--- a/pages/card/style.scss
+++ b/pages/card/style.scss
@@ -5,6 +5,9 @@
       Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     box-sizing: border-box;
 }
+input{
+  outline: none;
+}
 .glav_container{
   width: 74%;
   margin: 0 auto;
