--- a/pages/poisk/style.scss
+++ b/pages/poisk/style.scss
@@ -4,17 +4,35 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     box-sizing: border-box;
 }
+input{
+  outline: none;
+}
 .glav_continer{
   margin-top: 20px;
     display: flex;
+    margin-bottom: 40px;
     padding: 0 13%;
 }
-.container{
+.con{
     width: 100%;
-    margin-left: 10px;
     display: grid;
     gap: 20px;
     grid-template-columns: repeat(5, 1fr);
+}
+.pop_h1{
+  margin-left: 13%;
+  font-size: 22px;
+}
+.pops{
+  margin-left: 13%;
+    width: 74%;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(5, 1fr);
+}
+.container_poisk{
+  width: 80%;
+  margin-left: 10px;
 }
 .product {
     border: none;
@@ -109,5 +127,8 @@
   }
 }
 .svet{
+  font-size: 22px;
+}
+.h1_glav_ser{
   font-size: 22px;
 }
