--- a/pages/product_page/style.scss
+++ b/pages/product_page/style.scss
@@ -4,6 +4,9 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     box-sizing: border-box;
 }
+input{
+  outline: none;
+}
 .continer{
     width: 100%;
     padding: 0, 13% !important;
@@ -257,6 +260,7 @@
 }
 
 .modal{
+  display: flex;
   border-radius: 5px;
   display: none;
   padding: 5px 8px 5px 8px;
@@ -268,7 +272,6 @@
   background-color: #fff;
   box-shadow: 4px 4px 4px 2px rgba(0, 0, 0, 0.2);
   .close{
-    margin-left: 87%;
     margin-bottom: 70px;
     padding: 0;
     font-size: 35px;
@@ -292,6 +295,11 @@
     font-size: 17px;
   }
   .right_div{
+    .close{
+      width: fit-content;
+      margin-left: 85% !important;
+    }
+    display: block !important;
     margin-left: 15%;
   }
   .pereyti_v_kor{
@@ -302,7 +310,7 @@
   }
 }
 .show {
-	display: flex;
+	display: flex !important;
 }
 .hide {
 	display: none;
